--- a/conf/sahana.conf
+++ b/conf/sahana.conf
@@ -12,7 +12,7 @@
 
 # The official name of your site, ie. People Locator
 # This is used throughout Vesuvius for string replacement when referring to your site.
-$conf['site_name'] = "Sahana Vesuvius";
+$conf['site_name'] = "DMU Vesuvius";
 
 # enable the built-in PHP-Console debugger (requires http://goo.gl/KNTi0)
 $conf['enable_debugger'] = false;
@@ -31,7 +31,7 @@ $conf['https'] = "http://";
 $conf['theme'] = "lpf3"; // vesuvius theme is in a state of disrepair... so use this theme instead for now!
 
 # Database Configuration
-$conf['db_name'] = "vesuvius";
+$conf['db_name'] = "sahana-dmu";
 $conf['db_host'] = "localhost";
 $conf['db_port'] = "3306";
 $conf['db_user'] = "root";
@@ -47,7 +47,7 @@ $conf['enable_monitor_sql'] = false;
 $conf['locale'] = "en_US";
 
 # Whether to enable multiple language support
-$conf['enable_locale'] = true;
+$conf['enable_locale'] = false;
 
 # Whether to enable the use of Google Translations, and Google Translate settings
 $conf['google_translate_enable'] = false;
