--- a/www/.htaccess
+++ b/www/.htaccess
@@ -19,7 +19,7 @@ RewriteBase /public_html/sahana-dmu/www/
 ##### make mod_rewrite skip the subsequent rules if the file or folder exists already (the number must be incremented each time a new rule is added below)
 RewriteCond %{REQUEST_FILENAME} -d [OR]
 RewriteCond %{REQUEST_FILENAME} -f
-RewriteRule .* - [S=38]
+RewriteRule .* - [S=39]
 
 ##### matches /person.XXXXX for the person uuid's as urls
 RewriteRule ^(person.[0-9]+)$ ?mod=eap&val=$1 [L]
@@ -46,7 +46,7 @@ RewriteRule ^(dpa|vesuvius-portable)$          $2?mod=dpa [QSA]
 RewriteRule ^(edit|eap)$                       $2?mod=eap [QSA]
 RewriteRule ^(em|events|eventmanager)$         $2?mod=em [QSA]
 RewriteRule ^(eq|expiry|expiryqueue)$          $2?mod=eq [QSA]
-RewriteRule ^(ha|hospitals|hospitaladmin)$     $2?mod=ha [QSA]
+RewriteRule ^(fpa|focalpoints|fpadmin)$        $2?mod=fpa [QSA]
 RewriteRule ^(home)$                           $2?mod=home [QSA]
 RewriteRule ^(int|internal|internalresources)$ $2?mod=int [QSA]
 RewriteRule ^(inw|search)$                     $2?mod=inw [QSA]
@@ -57,6 +57,7 @@ RewriteRule ^(pop|outbound)$                   $2?mod=pop [QSA]
 RewriteRule ^(rap)$                            $2?mod=rap [QSA]
 RewriteRule ^(report)$                         $2?mod=report [QSA]
 RewriteRule ^(rez|resources)$                  $2?mod=rez [QSA]
+RewriteRule ^(rat|rapidassessment)$            $2?mod=rat [QSA]
 RewriteRule ^(sepl|searchplus)$                $2?mod=sepl [QSA]
 RewriteRule ^(snap|snapshot)$                  $2?mod=snap [QSA]
 RewriteRule ^(stat|statistics)$                $2?mod=stat [QSA]
