Refactored RAT to DAR

--- a/conf/sahana.conf
+++ b/conf/sahana.conf
@@ -12,7 +12,7 @@
 
 # The official name of your site, ie. People Locator
 # This is used throughout Vesuvius for string replacement when referring to your site.
-$conf['site_name'] = "DMU Vesuvius";
+$conf['site_name'] = "Disaster Management Information System";
 
 # enable the built-in PHP-Console debugger (requires http://goo.gl/KNTi0)
 $conf['enable_debugger'] = false;
