--- a/www/.htaccess
+++ b/www/.htaccess
@@ -57,7 +57,7 @@ RewriteRule ^(pop|outbound)$                   $2?mod=pop [QSA]
 RewriteRule ^(rap)$                            $2?mod=rap [QSA]
 RewriteRule ^(report)$                         $2?mod=report [QSA]
 RewriteRule ^(rez|resources)$                  $2?mod=rez [QSA]
-RewriteRule ^(rat|rapidassessment)$            $2?mod=rat [QSA]
+RewriteRule ^(rat|dar|assessment)$             $2?mod=dar [QSA]
 RewriteRule ^(sepl|searchplus)$                $2?mod=sepl [QSA]
 RewriteRule ^(snap|snapshot)$                  $2?mod=snap [QSA]
 RewriteRule ^(stat|statistics)$                $2?mod=stat [QSA]
