--- a/www/.htaccess
+++ b/www/.htaccess
@@ -14,7 +14,7 @@ RewriteEngine On
 ##### for when Sahana is installed on a virtual host at root level ie. http://domain.com/
 #RewriteBase /
 ##### for when Sahana is installed in a user homedir ie. http://domain.gov/~gmiernicki/sahanaDev/www/
-RewriteBase /public_html/sahana-dmu/www/
+RewriteBase /sahana-dmu/www/
 
 ##### make mod_rewrite skip the subsequent rules if the file or folder exists already (the number must be incremented each time a new rule is added below)
 RewriteCond %{REQUEST_FILENAME} -d [OR]
@@ -73,3 +73,5 @@ RewriteRule ^([^/][a-z0-9]+)/$ $2?shortname=$1 [QSA]
 
 ##### matches /shortname/index.php?vars=params
 RewriteRule ^([^/][a-z0-9]+)/(.+)$ $2?shortname=$1 [QSA]
+
+php_value short_open_tag 1
