--- a/www/.htaccess
+++ b/www/.htaccess
@@ -16,10 +16,12 @@ RewriteEngine On
 ##### for when Sahana is installed in a user homedir ie. http://domain.gov/~gmiernicki/sahanaDev/www/
 RewriteBase /sahana-dmu/www/
 
+
 ##### make mod_rewrite skip the subsequent rules if the file or folder exists already (the number must be incremented each time a new rule is added below)
 RewriteCond %{REQUEST_FILENAME} -d [OR]
 RewriteCond %{REQUEST_FILENAME} -f
-RewriteRule .* - [S=39]
+RewriteRule .* - [S=40]
+
 
 ##### matches /person.XXXXX for the person uuid's as urls
 RewriteRule ^(person.[0-9]+)$ ?mod=eap&val=$1 [L]
@@ -57,6 +59,7 @@ RewriteRule ^(pop|outbound)$                   $2?mod=pop [QSA]
 RewriteRule ^(rap)$                            $2?mod=rap [QSA]
 RewriteRule ^(report)$                         $2?mod=report [QSA]
 RewriteRule ^(rez|resources)$                  $2?mod=rez [QSA]
+
 RewriteRule ^(rat|rapidassessment)$            $2?mod=rat [QSA]
 RewriteRule ^(sepl|searchplus)$                $2?mod=sepl [QSA]
 RewriteRule ^(snap|snapshot)$                  $2?mod=snap [QSA]
@@ -64,6 +67,7 @@ RewriteRule ^(stat|statistics)$                $2?mod=stat [QSA]
 RewriteRule ^(tp|triagepic)$                   $2?mod=tp [QSA]
 RewriteRule ^(pref|settings)$                  $2?mod=pref [QSA]
 RewriteRule ^(xst|xmlstreamer)$                $2?mod=xst [QSA]
+RewriteRule ^(gis)$                            $2?mod=gis [QSA]
 
 ##### matches /shortname
 RewriteRule ^([^/][a-z0-9]+)$ $2?shortname=$1 [QSA]
