--- a/www/.htaccess
+++ b/www/.htaccess
@@ -14,12 +14,12 @@ RewriteEngine On
 ##### for when Sahana is installed on a virtual host at root level ie. http://domain.com/
 #RewriteBase /
 ##### for when Sahana is installed in a user homedir ie. http://domain.gov/~gmiernicki/sahanaDev/www/
-RewriteBase /public_html/sahana-dmu/www/
+RewriteBase /sahana-dmu/www/
 
 ##### make mod_rewrite skip the subsequent rules if the file or folder exists already (the number must be incremented each time a new rule is added below)
 RewriteCond %{REQUEST_FILENAME} -d [OR]
 RewriteCond %{REQUEST_FILENAME} -f
-RewriteRule .* - [S=39]
+RewriteRule .* - [S=40]
 
 ##### matches /person.XXXXX for the person uuid's as urls
 RewriteRule ^(person.[0-9]+)$ ?mod=eap&val=$1 [L]
@@ -64,6 +64,7 @@ RewriteRule ^(stat|statistics)$                $2?mod=stat [QSA]
 RewriteRule ^(tp|triagepic)$                   $2?mod=tp [QSA]
 RewriteRule ^(pref|settings)$                  $2?mod=pref [QSA]
 RewriteRule ^(xst|xmlstreamer)$                $2?mod=xst [QSA]
+RewriteRule ^(pa|preparedness)$                $2?mod=pa [QSA]
 
 ##### matches /shortname
 RewriteRule ^([^/][a-z0-9]+)$ $2?shortname=$1 [QSA]
